# SemesterProject_CellAutomate

./: .flake8  .gitignore  Pipfile  README.md  flake_log.txt  main.py  objects.py  pyproject.toml  setup.cfg  setup.py  test.py  view.py
CellAutomate/: .gitignore  README.md  RuleManager.py  colorMap.py  colors.py  lifeMap.py  makeLocales.sh  manage.py  model.py  objects.py  ruleManager.py  rulesNearCells.py  rulesSquares.py  test.py
CellAutomate/CellAutomate/: asgi.py  settings.py  urls.py  wsgi.py
CellAutomate/doc/: controller.rst  main.rst  model.rst  modules.rst  view.rst
CellAutomate/rules/: SamleRules.txt
CellAutomate/src/: main.py
CellAutomate/src/modules/controller/: controller.py
CellAutomate/src/modules/model/: lifeMap.py  model.py  ruleManager.py  rulesNearCells.py
CellAutomate/src/utils/: __init__.py  types.py
CellAutomate/tests/: controller.py  model.py  view.py
doc/: conf.py  index.rst  main.rst  utils.rst
ru/LC_MESSAGES/: view.po
rules/: GameOfLIfe.txt  SamleRules2.txt  WireWorld.txt
source/: main.py
source/modules/controller/: controller.py
source/modules/model/: __init__.py  model.py  ruleManager.py  rulesNearCells.py
source/modules/view/: view.py
source/utils/: colorMap.py  types.py
src/: main.py
src/modules/: controller.py
src/modules/controller/: __init__.py  controller.py
src/modules/model/: __init__.py  lifeMap.py  model.py  ruleManager.py  rulesNearCells.py  rulesSquares.py
src/modules/view/: __init__.py  view.pot  view.py
src/utils/: __init__.py  colorMap.py  colors.py
tests/: model.py  test.py  view.py
(+7 files in other folders)
