[metadata]
name = SemesterProject_CellAutomate
version = 1.0
author = A_Alexandrov/ E_Koblova / R_Kostin/ A_Lyubimov
author_email = --
url = https://github.com/EhDerj/SemesterProject_CellAutomate

[options]
packages = CellAutomate
include_packages_data = True
install_requires =
        CellAutomate
        build
        pybabel
        setuptools

[options.package_data]
CellAutomate = */*/*/*/base.mo, .flake8, */*.py, */*.txt
