[metadata]
name = SemesterProject_CellAutomate
version = 1.0
author = A_Alexandrov/ E_Koblova / R_Kostin/ A_Lyubimov
author_email = --
url = https://github.com/EhDerj/SemesterProject_CellAutomate

[options]
packages = source
include_packages_data = True
install_requires =
        source
        build
        pybabel
        setuptools

[options.package_data]
source = */*/*/*/base.mo, .flake8, */*.py, */*.txt
